--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
           <div class="col-md-3 tables-main">
               <div class="tables">
                 <div class="row">
-                    <div class="col-md-4"></div>
-                    <div class="col-md-8 table-row mt-2">
+                    <div class="col-xs-4"></div>
+                    <div class="col-xs-8 table-row mt-2">
                         <h6 class="mt-2"><u><strong>Tables</strong></u></h6>
                         <div class="table-shapes">
                             <div class="circle draggable"></div>
@@ -66,7 +66,7 @@
                 
               </div>
           </div>
-          <div class="col-md-6 draw-area">
+          <div class="col-md-9 draw-area">
             <div class="draw-box"></div>
             
 
